<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalcApplication</string>

    <string name="action_settings">Settings</string>

    <string name="bill_text_view">Notan</string> <!--Sammankopplad med text view för Notan-->
    <string name="bill_edit_text">0.0</string> <!--Skriver en deffault för bill_text_view-->

    <string name="tip_text_view">Dricks</string> <!--Sammankopplad med text view för Dricksen-->
    <string name="tip_edit_text">.15</string> <!--Skriver en deffault för tip_text_view-->

    <string name="final_text_view">Att betala</string> <!--Sammankopplad med text view för Slut summan-->
    <string name="final_bill_edit_text">.15</string> <!--Skriver en deffault för final_bill_text_view-->

    <string name="change_tip_text_view">Dricks</string> <!--Sammankopplad med text view för att ändra slut driksen med seekbar-->

    <!--SKAPAR EN STRING FÖR HUR PRESENTATIONEN VAR MED TILLHÖRANDE CHECKBOXES-->
    <string name="intro_text_view">Presentation</string>
    <string name="intro_friendly_text_view">Vänlig</string>
    <string name="intro_specials_text_view">Specials</string>
    <string name="intro_opinion_text_view">Omdöme</string>

    <!--SKAPAR EN STRING FÖR HUR Tillgänglihet VAR MED TILLHÖRANDE RADIOKNAPPAR-->
    <string name="available_text_view">Tillgänglihet</string>
    <string name="available_bad_radiobutton">Dålig</string>
    <string name="available_ok_radiobutton">OK</string>
    <string name="available_good_radiobutton">Bra</string>

    <!--SKAPAR STRING FÖR TIDEN MAN VÄNTAR PÅ SERVICE MED 3ST STRINGAR FÖR START, PAUSA OCH åTERSTÄLL-->
    <string name="time_waiting_text_view">Tid i väntan på service</string>
    <string name="start_chronometer_button">Starta</string>
    <string name="pausa_chronomter_button">Pausa</string>
    <string name="reset_chronometer_button">Återställ</string>

    <!--SKAPAR RESOURCES-->
    <string-array name="problem_solving">
        <item>Problem Solving</item>
        <item>Dålig</item>
        <item>Ok</item>
        <item>Bra</item>
    </string-array>
    
    



</resources>
